[package]
name = "cloudinary-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5"
actix-multipart = "0.6"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["multipart"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
mime = "0.3"
sha1 = "0.10"
hex = "0.4"
chrono = "0.4"
tempfile = "3.3"